# py2dist

./: .gitignore  CHANGELOG.md  Makefile  README.md  README_zh.md  pyproject.toml
.github/workflows/: publish.yml
py2dist/: __init__.py  cli.py  compiler.py  template.py
pyprotector/: cli.py  compiler.py  template.py
scripts/: py2so.py
tests/: main.py
tests/module_a/: mcp_service.py
