[project]
name = "pyprotector"
version = "0.1.0"
description = "Compile Python source files to .so/.pyd using Cython for source code protection"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["cython", "compile", "obfuscate", "so", "pyd"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: Stackless",
    "Programming Language :: C",
    "Programming Language :: C++",
    "Programming Language :: Cython",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed"
]
dependencies = ["cython>=3.0.0", "setuptools>=65.0.0"]

[project.scripts]
pyprotector = "pyprotector.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pyprotector"]
