[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "py2dist"
version = "0.1.0"
description = "Compile Python code to binary using Cython"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "Cython>=3.0.0",
    "setuptools>=68.0.0",
    "tqdm>=4.66.0",
]

[project.scripts]
py2dist = "py2dist.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["py2dist"]